[gd_scene load_steps=4 format=3 uid="uid://cet34abocbgu"]

[ext_resource type="Script" path="res://Scenes/event.gd" id="1_4uhkb"]
[ext_resource type="Texture2D" uid="uid://d0jvajvxs84ok" path="res://area_for_buttons_blue.png" id="1_32508"]
[ext_resource type="Texture2D" uid="uid://b5nwot00hrlm1" path="res://button.png" id="2_l7p3r"]

[node name="Event" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4uhkb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -141.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_32508")

[node name="EventText" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.141
anchor_top = 0.111
anchor_right = 0.859
anchor_bottom = 0.512
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "К тебе пришла смерть. Что ты 
будешь делать ?"

[node name="FirstVariant" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.135
anchor_top = 0.605
anchor_right = 0.871
anchor_bottom = 0.695
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("2_l7p3r")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/FirstVariant"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Смириться"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecondVariant" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.135
anchor_top = 0.856
anchor_right = 0.871
anchor_bottom = 0.922
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("2_l7p3r")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/SecondVariant"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Попытаться спастись"
horizontal_alignment = 1
vertical_alignment = 1
